<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SplashScreenActivity!</string>
    <string name="app_name">AndroidMobileDevice_2013</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="time">Time</string>
    <string name="altitude">Altitude</string>
    <string name="gps">GPS View</string>
    <string name="myID">DeviceID</string>
    <string name="myZone">myZoneRadius</string>
    <string name="myLoad">myLoad</string>
    <string name="myDomain">myDomain</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="updatePolicy">myUpdatePolicy</string>
    <string name="serverIP_and_port">ServerIP</string>
    <string name="batterystatus">BatteryStatus</string>
    <string name="mobiledevicestatus">MobileDeviceStatus</string>
    <string name="mintime">minTime</string>
    <string name="mindistance">minDistance</string>
    <string name="seconds">seconds</string>
    <string name="meters">meters</string>
    <string name="registration_email">Email</string>
    <string name="registration_phonenumber">Phone Number</string>
    <string name="registration_serverip">ServerIP</string>
    <string name="incharging">InCharging</string>
    <string name="battery">Battery</string>
    <string name="on_demand">ON_DEMAND</string>
    <string name="periodic">PERIODIC</string>
    <string name="testmode">TestMode</string>
    <string name="testdifference">TestDifference</string>
    <string name="photo_message">Photo Message</string>
    <string name="voice_message">Voice Message</string>
    <string name="text_message">Text Message</string>
    <string name="button_ok">OK</string>
</resources>